<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF06080F">

    <com.felipe.elftemplate.tracking3d.Skeleton3dOverlayView
        android:id="@+id/tracking3d_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/tracking3d_overlay_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:background="#AA000000"
        android:padding="10dp">

        <TextView
            android:id="@+id/tracking3d_sensor_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF7DF9FF"
            android:textSize="15sp"
            android:text="@string/tracking3d_waiting_sensor" />

        <TextView
            android:id="@+id/tracking3d_body_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:text="@string/tracking3d_waiting_body" />

        <TextView
            android:id="@+id/tracking3d_gesture_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFD166"
            android:textSize="15sp"
            android:text="@string/tracking3d_gesture_idle" />
    </LinearLayout>

    <Button
        android:id="@+id/tracking3d_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="14dp"
        android:minWidth="120dp"
        android:minHeight="52dp"
        android:text="@string/tracking3d_back" />

    <Button
        android:id="@+id/tracking3d_toggle_speech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="14dp"
        android:minWidth="180dp"
        android:minHeight="52dp"
        android:text="@string/tracking3d_speech_on" />
</FrameLayout>
